--- a/style.css
+++ b/style.css
@@ -23,15 +23,15 @@ html[data-theme="light"] {
     --overlay: rgba(243, 244, 246, 0.95);
 }
 
-.profile-dark {
+.only-dark {
   display: none;
 }
 
-html[data-theme="dark"] .profile-dark {
+html[data-theme="dark"] .only-dark {
   display: inline;
 }
 
-html[data-theme="dark"] .profile-light {
+html[data-theme="dark"] .only-light {
   display: none;
 }
 
@@ -45,14 +45,14 @@ html {
     top: 60px;
     right: 20px;
     z-index: 1000;
-    padding: 0.8rem;
+    padding: 1rem;
     background: var(--card-bg);
     border: 1px solid var(--border);
     color: var(--text);
     cursor: pointer;
-    font-family: 'Courier New', monospace;
-    text-transform: uppercase;
-    letter-spacing: 1px;
+    /* font-family: 'Courier New', monospace; */
+    /* text-transform: uppercase; */
+    /* letter-spacing: 1px; */
     transition: all 0.3s ease;
 }
 
@@ -65,12 +65,11 @@ html {
 .theme-toggle::before {
     content: '';
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: 2px;
+    left: 2px;
+    width: calc(100% - 6px);
+    height: calc(100% - 6px);
     border: 1px solid var(--border);
-    margin: 2px;
     pointer-events: none;
 }
 
